# catamaran_ws

./: README.md
catamaran_teleop/: CMakeLists.txt  package.xml
src/catamaran_bringup/: README.md  package.xml  setup.py
src/catamaran_bringup/config/: ros2_control_params.yaml
src/catamaran_bringup/launch/: bringup.launch.py
src/catamaran_controllers/: CMakeLists.txt  catamaran_controllers_plugins.xml  package.xml
src/catamaran_controllers/include/catamaran_controllers/: body_force_controller.hpp
src/catamaran_controllers/src/: body_force_controller.cpp
src/catamaran_description/: CMakeLists.txt  package.xml
src/catamaran_description/urdf/: catamaran.urdf.xacro
src/catamaran_hardware_interface/: CMakeLists.txt  catamaran_hardware_plugins.xml  package.xml
src/catamaran_hardware_interface/config/: thruster_lookup.csv
src/catamaran_hardware_interface/include/catamaran_hardware_interface/: catamaran_system.hpp  thruster_mapper.hpp
src/catamaran_hardware_interface/src/: catamaran_system.cpp  thruster_mapper.cpp
src/catamaran_navigator/: CMakeLists.txt  package.xml
src/catamaran_navigator/include/catamaran_navigator/: navigator_sim.hpp
src/catamaran_navigator/src/: navigator_sim.cpp
src/catamaran_sura/: CMakeLists.txt  package.xml
src/catamaran_sura/launch/: catamaran_sura.launch.py
