cmake_minimum_required(VERSION 3.8)
project(catamaran_navigator)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(sura_msgs REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(nav_msgs REQUIRED)
find_package(tf2 REQUIRED)


include_directories(include)

add_executable(navigator_sim
  src/navigator_sim.cpp
)

ament_target_dependencies(navigator_sim
  rclcpp
  sura_msgs
  geometry_msgs
  tf2
  nav_msgs
)

install(TARGETS
  navigator_sim
  DESTINATION lib/${PROJECT_NAME}
)

install(DIRECTORY include/
  DESTINATION include/
)

ament_package()